--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "VS-TTS: Controllable Voice Stylization for Text-to-Speech with Natural Language Prompts"
+title: "Enhancing Expressive Voice Conversion with Discrete Pitch-Conditioned Flow Matching Model"
 # description: Xulong Zhang
 
 theme: jekyll-theme-cayman
